--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,7 @@
           <li class="active"><a ng-href="#">Home</a></li>
           <li><a ng-href="#/about">About</a></li>
           <li><a ng-href="#">Contact</a></li>
+          <li><a ng-href="#/tareas">Tareas</a></li>
         </ul>
         <h3 class="text-muted">tareasAsoin</h3>
       </div>
