--- a/app/index.html
+++ b/app/index.html
@@ -24,10 +24,11 @@
     <div class="container">
       <div class="header">
         <ul class="nav nav-pills pull-right">
-          <li class="active"><a ng-href="#">Home</a></li>
-          <li><a ng-href="#/about">About</a></li>
-          <li><a ng-href="#">Contact</a></li>
+          <li class="active"><a ng-href="#">Inicio</a></li>
+          <li><a ng-href="#/about">Que es</a></li>
+          <li><a ng-href="#">Contacto</a></li>
           <li><a ng-href="#/tareas">Tareas</a></li>
+          <li><a ng-href="#/empleados">Empleados</a></li>
         </ul>
         <h3 class="text-muted">tareasAsoin</h3>
       </div>
@@ -35,7 +36,7 @@
       <div ng-view=""></div>
 
       <div class="footer">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team, with angularjs...</p>
       </div>
     </div>
 
@@ -69,14 +70,22 @@
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/firebase/firebase.js"></script>
+    <script src="bower_components/firebase-simple-login/firebase-simple-login.js"></script>
+    <script src="bower_components/mockfirebase/dist/mockfirebase.js"></script>
+    <script src="bower_components/angularfire/dist/angularfire.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
+    <!--classes js -->
+    <script src="lib/angular-locale_es-es.js"></script>
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/tareas.js"></script>
+        <script src="scripts/controllers/empleados.js"></script>
+        <script src="scripts/directives/aboutdirective.js"></script>
         <!-- endbuild -->
 </body>
 </html>
