--- a/app/index.html
+++ b/app/index.html
@@ -35,6 +35,27 @@
 
       <div ng-view=""></div>
 
+      <div class="navbar navbar-fixed-bottom" ng-controller="authController" ng-init="authState.user=''">
+          <div ng-show="authState.user" class="navbar-form navbar-right">
+              <input type="submit" class="btn btn-default" ng-click="logout()" value="logout {{authState.user}}"/>
+          </div>
+          <div ng-hide="authState.user">
+              <form id="id_auth_form" class="navbar-form navbar-right" ng-submit="login()">
+                  <div class="form-group">
+                      <input ng-model="username" required name="username" type="text" placeholder="username" class="form-control">
+                  </div>
+                  <div class="form-group">
+                      <input ng-model="password" required name="password" type="password" placeholder="password" class="form-control">
+                  </div>
+                  <div class="btn-group">
+                      <input type="submit" class="btn btn-default" value="login">
+                      <input type="submit" class="btn btn-default" value="register" ng-click="register($event)">
+                  </div>
+              </form>
+          </div>
+      </div>
+      
+
       <div class="footer">
         <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team, with angularjs...</p>
       </div>
@@ -76,6 +97,7 @@
     <script src="bower_components/jquery-ui/jquery-ui.js"></script>
     <script src="bower_components/angular-ui-date/src/date.js"></script>
     <script src="bower_components/lodash/dist/lodash.compat.js"></script>
+    <script src="bower_components/autofill-event/src/autofill-event.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <!--classes js -->
